# giphery

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  debug.keystore  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/giphery/app/: GipheryApp.kt  MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
android/gradle/: libs.versions.toml
memory/: MEMORY.md  giphery-build-state.md
server/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py  0002_device_prev_jti.py  0003_invite_target_user.py
server/app/: __init__.py  config.py  db.py  ids.py  logging_config.py  main.py  middleware.py
server/app/auth/: __init__.py  deps.py  invite_codes.py  passwords.py  rate_limit.py  tokens.py
server/app/models/: __init__.py  base.py  device.py  gif.py  invitation.py  tag.py  user.py
server/app/routers/: auth.py  gifs.py  health.py  invites.py  meta.py  setup.py  tags.py  webui.py
server/app/schemas/: auth.py  errors.py  gifs.py  invites.py  meta.py  tags.py  users.py
server/app/services/: auth_service.py  gif_validation.py  gifs.py  invites.py  tags.py  users.py  users_admin.py
server/app/storage/: __init__.py  filesystem.py
server/app/webui/: __init__.py  security.py
server/app/webui/static/: app.css  app.js
server/app/webui/templates/: base.html  dashboard.html  login.html  setup.html
server/deploy/: init-db.sql
server/tests/: conftest.py  test_auth.py  test_gifs.py  test_health.py  test_invites.py  test_logging.py  test_meta.py  test_setup.py  test_users.py  test_webui.py
unraid/: README.md  giphery-api.xml  giphery-db.xml
unraid/swag/: giphery.subdomain.conf
(+28 files in other folders)
